@@ -1,3 +1,7 @@
+2004-04-17  Richard Hult  <richard@imendio.com>
+
+	* sv.po:
+
 2004-04-17  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
